--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 </head>
 
 <body>
-  test
+  <div class="container-fluid" style="height: 70px; background-color: #1f1f3a;">
+    <header>
+        <div class="container">
+        <button class="btn btn-link btn-sm float-end text-white">en</button>
+        <button class="btn btn-link btn-sm float-end text-white">tr</button>
+      </div>
+    </header>
+  </div>
+
+  <div class="container-fluid" style="height: 500px; background-color: #fceb1f;">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+          <img src="./img/oguzhan.jpeg" alt="Profile Photo" style="margin-top: 200px; height: 500px">
+        </div>
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+          <h1>Who Am I ?</h1>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="./bootstrap.min.js"></script>
 </body>
 </html>
