--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
 
   <div class="container-fluid" style="height: 500px; background-color: #fceb1f;">
     <div class="container">
-      <div class="row">
+      <div class="row mb-3">
         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
           <img src="./img/oguzhan.jpeg" alt="Profile Photo" style="margin-top: 200px; height: 500px">
         </div>
         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-          <h1>Who Am I ?</h1>
+          <div class="my-3 mx-1 p-2">
+            <h1>Who Am I ?</h1>
+          </div>
         </div>
       </div>
     </div>
