--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="container-fluid" style="height: 70px; background-color: #1f1f3a;">
+  <div class="container-fluid" style="height: 70px; background-color: #110d0e;">
     <header>
         <div class="container">
         <button class="btn btn-link btn-sm float-end text-white">en</button>
@@ -18,17 +18,34 @@
     </header>
   </div>
 
-  <div class="container-fluid" style="height: 500px; background-color: #fceb1f;">
+  <div class="container-fluid" style="height: 500px; background-color: #825260;">
     <div class="container">
       <div class="row mb-3">
         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-          <img src="./img/oguzhan.jpeg" alt="Profile Photo" style="margin-top: 200px; height: 500px">
+          <img src="./img/profile_photo.jpeg" alt="Profile Photo" style="margin-top: 150px; height: 400px">
         </div>
-        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6 text-white">
           <div class="my-3 mx-1 p-2">
             <h1>Who Am I ?</h1>
           </div>
+          <div class="my-3 mx-1 p-2">
+            <p>I am Oğuzhan, a dedicated professional in the realm of
+               software and IT. With a strong passion for technology,
+               I have forged a path in this ever-evolving field, driven
+               by a desire to create innovative solutions and contribute
+               to the digital landscape. My journey has equipped me with
+               a solid foundation in coding, problem-solving, and project
+               management, allowing me to effectively navigate the complexities
+               of software development. As an avid learner, I continuously
+               seek to expand my knowledge, staying abreast of industry trends
+               and embracing new challenges with enthusiasm. With a commitment
+               to excellence, I am poised to make impactful contributions
+               in the world of software and IT.
+            </p>
+          </div>
         </div>
+
       </div>
     </div>
   </div>
