--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 <body>
   <div class="container-fluid" style="height: 70px; background-color: #110d0e;">
     <header>
-        <div class="container">
-        <button class="btn btn-link btn-sm float-end text-white">en</button>
-        <button class="btn btn-link btn-sm float-end text-white">tr</button>
+      <div class="container">
+        <a href="https://www.linkedin.com/in/o%C4%9Fuzhan-ta%C3%A7tan-463a421ab/" class="float-end" target="_blank">
+          <img src="./img/linkedin_icon.png" alt="LinkedIn Link" style="margin-top: 15px; height: 24px">
+        </a>
+        <!-- <button class="btn btn-link btn-sm float-end text-white">en</button>
+        <button class="btn btn-link btn-sm float-end text-white">tr</button> -->
       </div>
     </header>
   </div>
@@ -25,7 +28,7 @@
           <img src="./img/profile_photo.jpeg" alt="Profile Photo" style="margin-top: 150px; height: 400px">
         </div>
 
-        <div class="col-12 col-sm-12 col-md-6 col-lg-6 text-white">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
           <div class="my-3 mx-1 p-2">
             <h1>Who Am I ?</h1>
           </div>
@@ -45,7 +48,30 @@
             </p>
           </div>
         </div>
+      </div>
 
+      <div class="row mt-3 justify-content-center">
+        <div class="card text-white mb-3 mx-3" style="max-width: 18rem; background-color: #6d444f;">
+          <div class="card-header">Header</div>
+          <div class="card-body">
+            <h5 class="card-title">Light card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="card text-white mb-3 mx-3" style="max-width: 18rem; background-color: #6d444f">
+          <div class="card-header">Header</div>
+          <div class="card-body">
+            <h5 class="card-title">Light card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
+        <div class="card text-white mb-3 mx-3" style="max-width: 18rem; background-color: #6d444f">
+          <div class="card-header">Header</div>
+          <div class="card-body">
+            <h5 class="card-title">Light card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
