--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <div class="container-fluid" style="height: 500px; background-color: #825260;">
     <div class="container">
       <div class="row mb-3">
-        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-          <img src="./img/profile_photo.jpeg" alt="Profile Photo" style="margin-top: 150px; height: 400px">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6 mt-3 text-left">
+          <img src="./img/profile_photo.jpeg" alt="Profile Photo" class="w-75 my-5" style="box-shadow: 10px 10px 100px #000000;">
         </div>
 
         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
