--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Oğuzhan Taçtan</title>
@@ -15,8 +15,8 @@
         <a href="https://www.linkedin.com/in/o%C4%9Fuzhan-ta%C3%A7tan-463a421ab/" class="float-end" target="_blank">
           <img src="./img/linkedin_icon.png" alt="LinkedIn Link" style="margin-top: 15px; height: 24px">
         </a>
-        <!-- <button class="btn btn-link btn-sm float-end text-white">en</button>
-        <button class="btn btn-link btn-sm float-end text-white">tr</button> -->
+       <button class="btn btn-link btn-sm float-end text-white">en</button>
+        <button class="btn btn-link btn-sm float-end text-white">tr</button>
       </div>
     </header>
   </div>
@@ -76,5 +76,43 @@
     </div>
   </div>
   <script src="./bootstrap.min.js"></script>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Oğuzhan Taçtan</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background: linear-gradient(135deg, #71b7e6, #9b59b6);
+            font-family: 'Arial', sans-serif;
+            color: #fff;
+            text-align: center;
+        }
+        .container {
+            padding: 20px;
+            border-radius: 10px;
+            background: rgba(0, 0, 0, 0.5);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+        }
+        h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Yakında Hizmetinizde</h1>
+    </div>
 </body>
 </html>
