--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             color: #333;
         }
         header {
-            background-color: #5e5e5e;
+            background-color: #fff;
             color: white;
             padding: 1rem;
             text-align: left;
@@ -157,7 +157,7 @@
 <body>
 
     <header>
-        <h1>Oğuzhan Taçtan</h1>
+        <img src="./logo.png"></img>
     </header>
 
     <nav>
