--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 <body>
 
     <header>
-        <img src="./logo.png"></img>
+        <img src="./logo.png" height="50"></img>
     </header>
 
     <nav>
