--- a/index.html
+++ b/index.html
@@ -97,6 +97,6 @@
     <div class="background"></div>
     <h1>Hoşgeldiniz!</h1>
     <p>Web sitesine yakında erişim sağlayabileceksiniz.</p>
-    <button class="button">Başlayın</button>
+    <!-- <button class="button">Başlayın</button> -->
 </body>
 </html>
