--- a/index.html
+++ b/index.html
@@ -4,99 +4,179 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pastel Geçiş Örneği</title>
+    <title>CV - Oğuzhan Taçtan</title>
     <style>
-        /* Genel stil */
+        /* Genel stil ayarları */
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            color: #333;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             flex-direction: column;
-            overflow: hidden;
+            height: 100vh;
+            margin-top: 30px;
+        }
+
+        .container {
+            width: 80%;
+            max-width: 900px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+        }
+
+        h1, h2 {
+            text-align: center;
+            color: #007BFF;
+        }
+
+        .section {
+            margin-bottom: 30px;
+        }
+
+        .section h2 {
+            margin-bottom: 10px;
+        }
+
+        .section ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .section ul li {
+            margin: 5px 0;
+        }
+
+        .contact-info, .education, .experience, .skills {
+            margin-bottom: 20px;
+        }
+
+        .skills ul {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
+
+        .skills ul li {
+            background-color: #f1f1f1;
+            padding: 8px 15px;
+            border-radius: 20px;
+            font-size: 0.9em;
+        }
+
+        /* Yavaş geçişler */
+        h1, h2, .section h2 {
+            opacity: 0;
+            transform: translateY(20px);
+            animation: fadeInUp 1s forwards;
         }
 
         h1 {
-            font-size: 2.5em;
-            color: #333;
-            opacity: 0;
-            transform: translateY(50px);
-            animation: fadeInUp 1.5s forwards;
+            animation-delay: 0.2s;
         }
 
-        p {
-            font-size: 1.2em;
-            color: #555;
-            max-width: 600px;
+        .section h2 {
+            animation-delay: 0.3s;
+        }
+
+        .section ul li {
             opacity: 0;
-            transform: translateY(50px);
-            animation: fadeInUp 1.5s forwards;
+            animation: fadeInUp 1s forwards;
             animation-delay: 0.5s;
         }
 
-        .button {
-            margin-top: 20px;
-            padding: 15px 30px;
-            font-size: 1em;
-            background-color: #ffb6c1; /* Pastel pembe */
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            opacity: 0;
-            transform: translateY(50px);
-            animation: fadeInUp 1.5s forwards;
-            animation-delay: 1s;
+        .section ul li:nth-child(even) {
+            animation-delay: 0.6s;
         }
 
-        .button:hover {
-            background-color: #ff6f91; /* Hoverda daha derin pastel pembe */
-            transform: scale(1.05);
-            transition: all 0.3s ease-in-out;
-        }
-
-        /* Arka plan animasyonu */
-        .background {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(45deg, #ffb6c1, #add8e6, #f0e68c, #ffdab9);
-            background-size: 400% 400%;
-            animation: gradientBackground 10s ease infinite;
-        }
-
-        /* Arka planın pastel renk geçişi */
-        @keyframes gradientBackground {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
-
-        /* Animasyon tanımları */
         @keyframes fadeInUp {
             to {
                 opacity: 1;
                 transform: translateY(0);
             }
         }
+
     </style>
 </head>
 <body>
-    <div class="background"></div>
-    <h1>Hoşgeldiniz!</h1>
-    <p>Web sitesine yakında erişim sağlayabileceksiniz.</p>
-    <!-- <button class="button">Başlayın</button> -->
+    <div class="container">
+        <!-- Kişisel Bilgiler -->
+        <section class="contact-info section">
+            <h1>Oğuzhan Taçtan</h1>
+            <p>Email: <strong>oguzhantactan09@gmail.com</strong></p>
+            <p>Telefon: <strong>(+90) 542 419 32 07 </strong></p>
+            <p>Adres: <strong>Aydın, Türkiye</strong></p>
+        </section>
+
+        <!-- Eğitim Bilgileri -->
+        <section class="education section">
+            <h2>Eğitim</h2>
+            <ul>
+                <li><strong>Hacettepe Üniversitesi Geomatik Mühendisliği</strong> (2016 - 2021): Lisans, GPA: 3.12</li>
+                <li><strong>Aydın Atatürk Anadolu Lisesi</strong> (2012 - 2016): Lise</li>
+                <!-- Eklemek için buraya daha fazla eğitim bilgisi ekleyebilirsiniz. -->
+            </ul>
+        </section>
+
+        <!-- İş Deneyimi -->
+        <section class="experience section">
+            <h2>İş Deneyimi</h2>
+            <ul>
+                <li><strong>PrimeIT Bilişim A.Ş. - Full-Stack Developer</strong> (2021 - 2024)</li>
+                <ul>
+                    <li>React ve NodeJS gibi güncel framework'ler ile web sitesi tasarımı, yazılımı.</li>
+                    <li>Monitoring tool'u geliştirildi.</li>
+					<li>DB Script Execute aracı geliştirildi.</li>
+                </ul>
+                <li><strong>PrimeIT Bilişim A.Ş. - Orta Katman Yönetimi</strong> (2022 - 2024)</li>
+                <ul>
+                    <li>Container ve container yönetim teknolojileri kullanımı</li>
+                    <li>APM toolları yönetimi ve kontrolü</li>
+                    <li>...</li>
+                </ul>
+            </ul>
+        </section>
+
+        <!-- Teknolojiler / Beceriler -->
+        <section class="skills section">
+            <h2>Beceriler & Teknolojiler</h2>
+            <ul>
+                <li>HTML, CSS, JavaScript</li>
+                <li>React, Node.js</li>
+                <li>SQL, MariaDB, PostgreDB</li>
+                <li>Git, GitHub</li>
+                <li>Nginx, Nginx Plus, Apache HTTP Server</li>
+				<li>Docker, Kubernetes, Openshift</li>
+				<li>Dynatrace, Glowroot, Riverbed</li>
+                <!-- Teknolojileri ve becerilerinizi eklemek için buraya yeni öğeler ekleyebilirsiniz. -->
+            </ul>
+        </section>
+
+        <!-- Diller -->
+        <section class="languages section">
+            <h2>Diller</h2>
+            <ul>
+                <li><strong>Türkçe:</strong> Anadil</li>
+                <li><strong>İngilizce:</strong> İleri Seviye</li>
+                <!-- Dillerinizi buraya ekleyebilirsiniz. -->
+            </ul>
+        </section>
+
+        <!-- İlgi Alanları -->
+        <section class="interests section">
+            <h2>İlgi Alanları</h2>
+            <ul>
+                <li>Yazılım geliştirme ve yeni teknolojilerle ilgilenmek</li>
+                <li>Seyahat etmek, farklı kültürleri keşfetmek</li>
+				<li>Bilimsel makale ve dergiler okumak</li>
+                <!-- Kendi ilgi alanlarınızı buraya ekleyebilirsiniz. -->
+            </ul>
+        </section>
+    </div>
 </body>
 </html>
