--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     <li>Monitoring tool'u geliştirildi.</li>
 					<li>DB Script Execute aracı geliştirildi.</li>
                 </ul>
-                <li><strong>PrimeIT Bilişim A.Ş. - Orta Katman Yönetimi</strong> (2022 - 2024)</li>
+                <li><strong>PrimeIT Bilişim A.Ş. - Orta Katman Yönetimi (Allianz Sigorta - Danışman)</strong> (2022 - 2024)</li>
                 <ul>
                     <li>Container ve container yönetim teknolojileri kullanımı</li>
                     <li>APM toolları yönetimi ve kontrolü</li>
